# depguard

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-MIT  PR_BODY.md  README.md  check_file.py  fix_conformance.py  fix_line.py  fix_test.py  mutants.toml
.githooks/: pre-commit
.github/: CODEOWNERS  settings.yml
.github/workflows/: ci.yml  conformance.yml  depguard-reusable.yml  depguard.yml  release.yml
contracts/docs/: artifact-layout.md  capabilities-and-missingness.md  cockpit-comment-abi.md  determinism-and-truncation.md  finding-payload.md  identity-and-codes.md
contracts/fixtures/: fail.sensor.report.json  pass.sensor.report.json  skip.sensor.report.json  tool_error.sensor.report.json  warn.sensor.report.json
contracts/schemas/: buildfix.plan.v1.json  cockpit.report.v1.json  sensor.report.v1.json
crates/depguard/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-app/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-app/src/: baseline.rs  check.rs  explain.rs  fix.rs  lib.rs  render.rs  report.rs
crates/depguard-check-catalog/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-check-catalog/src/: lib.rs
crates/depguard-cli/: CLAUDE.md  Cargo.toml  README.md  __test_report__.json
crates/depguard-cli/src/: cargo_depguard.rs  main.rs
crates/depguard-cli/tests/: bdd.rs  cockpit_mode.rs  conformance.rs  crypto_fixtures.rs  fixtures.rs  help.rs  integration.rs
crates/depguard-domain/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-domain-checks/: CLAUDE.md  Cargo.toml  MUTATION_TESTING_REPORT.md  README.md
crates/depguard-domain-checks/src/: fingerprint.rs  lib.rs  model.rs  policy.rs  test_support.rs
crates/depguard-domain-checks/src/checks/: git_requires_version.rs  mod.rs  optional_unused.rs  path_safety.rs  proptest.rs  tests.rs  utils.rs  yanked_versions.rs
crates/depguard-domain-core/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-domain-core/src/: lib.rs  model.rs
crates/depguard-domain/proptest-regressions/: proptest.txt
crates/depguard-domain/src/: engine.rs  fingerprint.rs  lib.rs  model.rs  policy.rs  proptest.rs  report.rs  test_support.rs
crates/depguard-domain/src/checks/: default_features_explicit.rs  dev_only_in_normal.rs  git_requires_version.rs  mod.rs  no_multiple_versions.rs  no_wildcards.rs  optional_unused.rs  path_requires_version.rs  path_safety.rs  tests.rs  utils.rs  workspace_inheritance.rs  yanked_versions.rs
crates/depguard-inline-suppressions/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-inline-suppressions/src/: lib.rs
crates/depguard-render/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-render/src/: gha.rs  jsonl.rs  junit.rs  lib.rs  markdown.rs  model.rs  sarif.rs
crates/depguard-repo/: CARGO_GLOB_ALIGNMENT.md  CLAUDE.md  Cargo.toml  README.md
crates/depguard-repo-parser/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-repo-parser/src/: lib.rs
crates/depguard-repo/src/: cache.rs  discover.rs  lib.rs  parse.rs
crates/depguard-repo/src/parser/: inline_suppressions.rs  mod.rs
crates/depguard-repo/tests/: build_workspace_model.rs  discover.rs
crates/depguard-settings/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-settings/src/: lib.rs  model.rs  presets.rs  resolve.rs  validation_error.rs
crates/depguard-test-util/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-test-util/src/: lib.rs
crates/depguard-types/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-types/src/: baseline.rs  buildfix.rs  explain.rs  ids.rs  lib.rs  path.rs  receipt.rs
crates/depguard-yanked/: CLAUDE.md  Cargo.toml  README.md
crates/depguard-yanked/src/: lib.rs
crates/depguard/src/: lib.rs
docs/: README.md  architecture.md  checks.md  ci-integration.md  config.md  design.md  implementation-plan.md  implementation.md  microcrates.md  org-rollout.md  output-contract.md  public-api.md  quickstart.md  requirements.md  roadmap.md  tasks.md  testing.md  troubleshooting.md
examples/: cockpit.toml  depguard.toml  github-actions-snippet.yml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_dependency_spec.rs  fuzz_glob_expansion.rs  fuzz_inline_suppressions.rs  fuzz_manifest_parser.rs  fuzz_toml_parser.rs  fuzz_workspace_discovery.rs
schemas/: depguard.baseline.v1.json  depguard.config.v1.json  depguard.report.v1.json  depguard.report.v2.json  receipt.envelope.v1.json
scripts/ci/: smoke-test.ps1  smoke-test.sh
test-data/: report.json
tests/bdd/: README.md  wildcards.feature
tests/features/: README.md  checks.feature  ci_integration.feature  configuration.feature  depguard.feature  determinism.feature  diff_scope.feature  roadmap.feature  rules_no_wildcards.feature  rules_path_requires_version.feature  rules_path_safety.feature  rules_workspace_inheritance.feature  workspaces.feature
tests/fixtures/clean/: Cargo.toml  __test_report__.json  expected.comment.md  expected.report.json  expected.sensor-report.json  report.json
tests/fixtures/default_features_explicit/: Cargo.toml  depguard.toml  expected.report.json
tests/fixtures/dev_only_in_normal/: Cargo.toml  depguard.toml  expected.report.json
tests/fixtures/empty_dep_spec/: Cargo.toml  expected.report.json
tests/fixtures/empty_package/: Cargo.toml  expected.report.json
tests/fixtures/git_requires_version/: Cargo.toml  depguard.toml  expected.report.json
tests/fixtures/inline_suppression/: Cargo.toml  (+2 more)
tests/fixtures/multi_violation/: Cargo.toml  __test_report__.json  expected.report.json  report.json
tests/fixtures/path_safety/: Cargo.toml  __test_report__.json  expected.comment.md  expected.report.json  report.json
tests/fixtures/publish_false/: Cargo.toml  expected.report.json
tests/fixtures/publish_false_enforced/: Cargo.toml  depguard.toml  expected.report.json
tests/fixtures/target_deps/: Cargo.toml  expected.report.json  report.json
tests/fixtures/unicode_deps/: Cargo.toml  expected.report.json
tests/fixtures/workspace_inheritance/member-crate/: Cargo.toml
xtask/: CLAUDE.md  Cargo.toml  README.md
xtask/src/: main.rs
xtask/tests/: xtask_bin.rs
(+48 files in other folders)
