[workspace]
resolver = "2"
members = [
  "crates/depguard-types",
  "crates/depguard-settings",
  "crates/depguard-domain",
  "crates/depguard-repo",
  "crates/depguard-render",
  "crates/depguard-app",
  "crates/depguard-cli",
  "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/depguard"
authors = ["Depguard contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
camino = "1"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
clap = { version = "4", features = ["derive"] }
schemars = "0.8"
proptest = "1"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }
tempfile = "3"
walkdir = "2"
