[workspace]
resolver = "2"
members = [
  "crates/depguard-types",
  "crates/depguard-settings",
  "crates/depguard-domain",
  "crates/depguard-repo",
  "crates/depguard-render",
  "crates/depguard-app",
  "crates/depguard-cli",
  "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/depguard"
authors = ["Depguard contributors"]

[workspace.dependencies]
anyhow = "1.0.101"
thiserror = "2.0.18"
camino = "1.2.2"
globset = "0.4.18"
sha2 = "0.10.9"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
toml_edit = "0.23.9"
time = { version = "0.3.47", features = ["formatting", "macros", "serde", "parsing"] }
clap = { version = "4.5.57", features = ["derive"] }
schemars = "1.2.1"
proptest = "1.10.0"
assert_cmd = "2.1.2"
predicates = "3.1.3"
insta = { version = "1.46.3", features = ["json"] }
tempfile = "3.24.0"
walkdir = "2.5.0"
cucumber = "0.22.1"
async-trait = "0.1.89"
futures = "0.3.31"
jsonschema = { version = "0.41.0", features = ["draft202012"] }
