[workspace]
resolver = "2"
members = [
  "crates/depguard-types",
  "crates/depguard-yanked",
  "crates/depguard-settings",
  "crates/depguard-domain",
  "crates/depguard-domain-core",
  "crates/depguard-domain-checks",
  "crates/depguard-check-catalog",
  "crates/depguard-inline-suppressions",
  "crates/depguard-repo-parser",
  "crates/depguard-repo",
  "crates/depguard-render",
  "crates/depguard-app",
  "crates/depguard-cli",
  "crates/depguard-test-util",
  "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/depguard/"
homepage = "https://github.com/EffortlessMetrics/depguard/"
description = "Repo-truth dependency manifest hygiene sensor for Rust workspaces"
keywords = ["depguard", "dependencies", "dependency-management", "cargo", "security"]
authors = ["Depguard contributors"]

[workspace.dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
camino = "1.2.2"
globset = "0.4.18"
sha2 = "0.11.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.0"
toml_edit = "0.25.8"
time = { version = "0.3.47", features = ["formatting", "macros", "serde", "parsing"] }
clap = { version = "4.6.0", features = ["derive"] }
schemars = "1.2.1"
proptest = "1.11.0"
assert_cmd = "2.2.0"
predicates = "3.1.4"
insta = { version = "1.47.1", features = ["json"] }
tempfile = "3.27.0"
walkdir = "2.5.0"
cucumber = "0.22.1"
async-trait = "0.1.89"
futures = "0.3.32"
jsonschema = "0.45.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
uselesskey = { version = "0.5.1", default-features = false, features = ["x509"] }
