[package]
name = "depguard-fuzz"
version = "0.0.0"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"
arbitrary = { version = "1.4.2", features = ["derive"] }

[dependencies.depguard-repo]
path = "../crates/depguard-repo"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_toml_parser"
path = "fuzz_targets/fuzz_toml_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_glob_expansion"
path = "fuzz_targets/fuzz_glob_expansion.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_inline_suppressions"
path = "fuzz_targets/fuzz_inline_suppressions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_workspace_discovery"
path = "fuzz_targets/fuzz_workspace_discovery.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_manifest_parser"
path = "fuzz_targets/fuzz_manifest_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dependency_spec"
path = "fuzz_targets/fuzz_dependency_spec.rs"
test = false
doc = false
bench = false
