[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true

depguard-types = { path = "../crates/depguard-types" }
