[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Developer automation tasks for depguard schemas, fixtures, and conformance checks"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
jsonschema.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

depguard-types = { path = "../crates/depguard-types" }
depguard-settings = { path = "../crates/depguard-settings" }
depguard-test-util = { path = "../crates/depguard-test-util" }
