[package]
name = "depguard-app"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
description = "depguard application use cases for check, explain, baseline, and rendering"
readme = "README.md"

[dependencies]
depguard-types = { version = "0.1.0", path = "../depguard-types" }
depguard = { version = "0.1.0", path = "../depguard", default-features = false }
depguard-repo = { version = "0.1.0", path = "../depguard-repo" }
depguard-settings = { version = "0.1.0", path = "../depguard-settings", default-features = false }
depguard-render = { version = "0.1.0", path = "../depguard-render" }
depguard-yanked = { version = "0.1.0", path = "../depguard-yanked" }

anyhow.workspace = true
camino.workspace = true
serde_json.workspace = true
time.workspace = true
toml_edit.workspace = true

[features]
default = ["depguard/default", "depguard-settings/default"]
check-no-wildcards = [
    "depguard/check-no-wildcards",
    "depguard-settings/check-no-wildcards",
]
check-path-requires-version = [
    "depguard/check-path-requires-version",
    "depguard-settings/check-path-requires-version",
]
check-path-safety = [
    "depguard/check-path-safety",
    "depguard-settings/check-path-safety",
]
check-workspace-inheritance = [
    "depguard/check-workspace-inheritance",
    "depguard-settings/check-workspace-inheritance",
]
check-git-requires-version = [
    "depguard/check-git-requires-version",
    "depguard-settings/check-git-requires-version",
]
check-dev-only-in-normal = [
    "depguard/check-dev-only-in-normal",
    "depguard-settings/check-dev-only-in-normal",
]
check-default-features-explicit = [
    "depguard/check-default-features-explicit",
    "depguard-settings/check-default-features-explicit",
]
check-no-multiple-versions = [
    "depguard/check-no-multiple-versions",
    "depguard-settings/check-no-multiple-versions",
]
check-optional-unused = [
    "depguard/check-optional-unused",
    "depguard-settings/check-optional-unused",
]
check-yanked-versions = [
    "depguard/check-yanked-versions",
    "depguard-settings/check-yanked-versions",
]

[dev-dependencies]
tempfile.workspace = true
