[package]
name = "depguard-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[[bin]]
name = "depguard"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde_json.workspace = true

depguard-app = { version = "0.1.0", path = "../depguard-app" }
depguard-domain = { version = "0.1.0", path = "../depguard-domain" }
depguard-render = { version = "0.1.0", path = "../depguard-render" }
depguard-settings = { version = "0.1.0", path = "../depguard-settings" }
depguard-types = { version = "0.1.0", path = "../depguard-types" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
cucumber.workspace = true
async-trait.workspace = true
futures.workspace = true
jsonschema.workspace = true
walkdir.workspace = true
time.workspace = true
depguard-test-util = { version = "0.1.0", path = "../depguard-test-util" }

[[test]]
name = "bdd"
harness = false
