[package]
name = "depguard-domain-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core model and policy primitives for depguard domain logic"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
readme = "../depguard-domain/README.md"
publish = false

[dependencies]
depguard-types = { version = "0.1.0", path = "../depguard-types" }
depguard-yanked = { version = "0.1.0", path = "../depguard-yanked" }
serde.workspace = true

