[package]
name = "depguard-domain-core"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core model and policy primitives for depguard domain logic"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
depguard-types = { version = "0.1.2", path = "../depguard-types" }
depguard-yanked = { version = "0.1.2", path = "../depguard-yanked" }
serde.workspace = true
