[package]
name = "depguard-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure dependency policy evaluation engine for depguard (no I/O)"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
globset.workspace = true
sha2.workspace = true
hex.workspace = true

depguard-types = { version = "0.1.0", path = "../depguard-types" }
depguard-yanked = { version = "0.1.0", path = "../depguard-yanked" }

[dev-dependencies]
proptest.workspace = true
rand = "0.9.2"
