[package]
name = "depguard-domain"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure dependency policy evaluation engine for depguard (no I/O)"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
depguard-domain-core = { version = "0.1.2", path = "../depguard-domain-core" }
depguard-domain-checks = { version = "0.1.2", path = "../depguard-domain-checks", default-features = false }

depguard-types = { version = "0.1.2", path = "../depguard-types" }

[dev-dependencies]
proptest.workspace = true
rand = "0.9.2"

[features]
default = [
    "check-no-wildcards",
    "check-path-requires-version",
    "check-path-safety",
    "check-workspace-inheritance",
    "check-git-requires-version",
    "check-dev-only-in-normal",
    "check-default-features-explicit",
    "check-no-multiple-versions",
    "check-optional-unused",
    "check-yanked-versions",
]

check-no-wildcards = ["depguard-domain-checks/check-no-wildcards"]
check-path-requires-version = ["depguard-domain-checks/check-path-requires-version"]
check-path-safety = ["depguard-domain-checks/check-path-safety"]
check-workspace-inheritance = ["depguard-domain-checks/check-workspace-inheritance"]
check-git-requires-version = ["depguard-domain-checks/check-git-requires-version"]
check-dev-only-in-normal = ["depguard-domain-checks/check-dev-only-in-normal"]
check-default-features-explicit = ["depguard-domain-checks/check-default-features-explicit"]
check-no-multiple-versions = ["depguard-domain-checks/check-no-multiple-versions"]
check-optional-unused = ["depguard-domain-checks/check-optional-unused"]
check-yanked-versions = ["depguard-domain-checks/check-yanked-versions"]
