[package]
name = "depguard-inline-suppressions"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
description = "Inline suppression parser for depguard"
readme = "README.md"

[dependencies]
depguard-types = { version = "0.1.0", path = "../depguard-types" }

[dev-dependencies]
proptest.workspace = true
