[package]
name = "depguard-render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
depguard-types = { version = "0.1.0", path = "../depguard-types" }

[dev-dependencies]
insta.workspace = true
time.workspace = true
