[package]
name = "depguard-repo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
globset.workspace = true
toml_edit.workspace = true
walkdir.workspace = true

depguard-types = { version = "0.1.0", path = "../depguard-types" }
depguard-domain = { version = "0.1.0", path = "../depguard-domain" }

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
