[package]
name = "depguard-repo"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workspace discovery and Cargo.toml parsing adapters for depguard"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
camino.workspace = true
globset.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

depguard-types = { version = "0.1.2", path = "../depguard-types" }
depguard-domain-core = { version = "0.1.2", path = "../depguard-domain-core" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
