[package]
name = "depguard-settings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
schemars.workspace = true
serde.workspace = true
toml.workspace = true

depguard-types = { path = "../depguard-types" }
depguard-domain = { path = "../depguard-domain" }
