[package]
name = "depguard-settings"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
schemars.workspace = true
serde.workspace = true
toml.workspace = true
globset.workspace = true

depguard-types = { version = "0.1.0", path = "../depguard-types" }
depguard-domain = { version = "0.1.0", path = "../depguard-domain" }
