[package]
name = "depguard-test-util"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
publish = false

[dependencies]
serde_json.workspace = true
