[package]
name = "depguard-test-util"
version = "0.1.2"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared test utilities for depguard fixture and report normalization"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
readme = "README.md"

[features]
default = []
crypto-fixtures = ["dep:uselesskey"]

[dependencies]
serde_json.workspace = true
uselesskey = { workspace = true, optional = true }
