[package]
name = "depguard-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Stable depguard protocol types, IDs, and explanation registry"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
time.workspace = true
