[package]
name = "depguard-yanked"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Offline yanked-version index parser and exact lookup model for depguard"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
