[package]
name = "clean"
version = "0.1.0"
edition = "2021"

[dependencies]
# All dependencies use exact versions (no wildcards)
serde = "1.0.203"
serde_json = "1.0.117"

# Optional dependency with features - still valid
tokio = { version = "1.38.0", features = ["full"], optional = true }

[dev-dependencies]
# Dev dependency with exact version
proptest = "1.4.0"

[build-dependencies]
# Build dependency with exact version
cc = "1.0.99"
